Melhorias e inicio de movimentação de caixa

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -38,6 +38,6 @@ ol.breadcrumb {
     justify-content: center;
 }
 
-div.dataTables_wrapper {
+div.dataTables_wrapper, .dataTable {
     overflow-x: auto;
 }
